# pyLEEM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES  example.ipynb  pyproject.toml
.github/: pull_request_template.md
.github/issue_template/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  draft-pdf.yml  publish-pypi.yml  tests.yml
docs/: NOTICE.md  THIRD_PARTY_LICENSES.md  calibration.md  conf.py  design.md  index.md  workflow.md
docs/analysis/: desp.md  leem.md  sees.md  xas.md  xps.md
docs/annotation/: drawroi.md  metatext.md  scalebar.md
docs/api/: analyzer.md  reader.md  roi.md
docs/modules/: analysis.md  analyzer.md  annotation.md  calibrate.md  config.md  desp.md  drift.md  index.md  metadata.md  metainfo.md  operation.md  reader.md  roi.md  sees.md  stitch.md  utils.md  xas.md  xps.md
docs/operation/: drift.md  stitch.md
docs/ref/: analyzer_ref.md  annotation_ref.md  config_ref.md  desp_ref.md  fullfield_ref.md  leem_ref.md  metadata_ref.md  metainfo_ref.md  operation_ref.md  reader_ref.md  roi_ref.md  sees_ref.md  spectra_ref.md  workflow_ref.md  xas_ref.md  xps_ref.md
docs/usage/: config.md  reader.md  roi.md
joss/: paper.bib  paper.md
pyleem/: __init__.py  amorphleed.py  analysis.py  analyzer.py  calibrate.py  calibration.py  config.py  desp.py  metadata.py  metainfo.py  reader.py  roi.py  se.py  sees.py  stitch.py  utils.py  workflow.py  xps.py
pyleem/analysis/: desp.py  (+8 more)
tests/: conftest.py  test_amorphleed.py  test_analysis.py  test_analyzer.py  test_calibrate.py  test_config.py  test_desp.py  test_drawroi.py  test_drift.py  test_fullfield.py  test_leem.py  test_metadata.py  test_metatext.py  test_reader.py  test_roi.py  test_scalebar.py  test_sees.py  test_spectra.py  test_stitch.py  test_utils.py  test_workflow.py  test_xas.py  test_xps.py
(+7 files in other folders)
