[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyleem"
version = "0.2.0"
description = "Low Energy Electron Microscopy data analysis toolkit"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Peter Sun", email = "hs859@cornell.edu" }]
maintainers = [{ name = "Peter Sun", email = "hs859@cornell.edu" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2",
    "scikit-image>=0.24.0",
    "matplotlib>=3.9.0",
    "roifile==2026.2.10",
    "lmfit>=1.3.2",
    "opencv-python>=4.12.0",
    "tomlkit>=0.12",
    "scipy>=1.17.0"
]

[project.optional-dependencies]
test = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "coverage>=7.13.4"]
docs = [
    "sphinx>=9.0.4",
    "sphinx-book-theme>=1.1.4",
    "myst-parser"
]

[project.urls]
Repository = "https://github.com/peterhys/PyLEEM"

[tool.setuptools]
packages = ["pyleem", "pyleem.analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["pyleem"]
omit = ["tests/*"]

[tool.tox]
env_list = ["py311", "py312", "coverage", "docs"]

[tool.tox.gh.python]
"3.11" = ["py311"]
"3.12" = ["py312"]

[tool.tox.env_run_base]
package = "wheel"
extras = ["test"]
commands = [["pytest"]]

[tool.tox.env.coverage]
package = "wheel"
extras = ["test"]
commands = [["pytest", "--cov=pyleem", "--cov-report=html"]]

[tool.tox.env.docs]
package = "wheel"
extras = ["docs"]
commands = [
    [
        "sphinx-build",
        "-W",
        "-b",
        "html",
        "-d",
        "{work_dir}/docs",
        "docs",
        "{tox_root}/docs/_build/html"
    ]
]